feat(occurrence): add lightweight map endpoint with role-based status filtering